fix spacing problems + chat header half done

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,7 +41,7 @@ main{
 }
 
 .workspace-name-grid{
-    height: 100% !important;
+    height: 63.99px;
     padding-top: 6% !important;
     padding-bottom: 7% !important;
     padding-left: 5% !important;
@@ -73,6 +73,10 @@ main{
     padding-left: 2% !important;
 }
 
+.testcol{
+    padding-top: 5% !important;
+}
+
 .workspace-menu{
     /* padding: 0 !important;  */
     background: #401C41 !important;
@@ -82,8 +86,8 @@ main{
 }
 
 .new-message-btn{
-    height: 125%;
-    width: 50%;
+    height: 36px;
+    width: 36px;
     background: white !important;
     float: right !important;
     margin-right: 15% !important;
@@ -139,17 +143,21 @@ main{
     CHAT START
 */
 
+.chat-grid{
+    height: calc(100% - 67px) !important;
+}
+
 .workspace-chat{
-    background: red !important;
     height: 100% !important;
 }
 
 
 .chat-header {
-    background: cyan !important;
-    height: 6% !important;
+    height: 67px !important;
     padding: 0 !important;
     margin: 0 !important;   
+    padding-left: 1% !important;
+    padding-right: 1% !important;
 
 }
 
@@ -162,13 +170,28 @@ main{
 
 
 .chat-chatbox-container{
-    height: 10% !important;
+    height: 16% !important;
     background: green;
     padding: 0 !important;
     margin: 0 !important;
 }
 
+#channel-title-chat{
+    font-weight: bold !important;
+}
 
+#chat-channel-topic{
+    color: gray !important;
+}
+
+#star-channel-btn{
+    margin-left: 5px !important;
+}
+
+#chat-channel-topic:hover{
+    cursor: pointer !important;
+    color: rgb(0, 119, 255) !important;
+}
 
 /* 
     CHAT END
@@ -186,6 +209,18 @@ main{
 
 .h-100{
     height: 100% !important;
+}
+
+.unstyled{
+    all:unset !important;
+}
+
+.text-btn:hover{
+    cursor: pointer !important;
+}
+
+.center-vertical{
+    top: 25%;
 }
 
 /* 
